--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -148,42 +148,42 @@
             <div class="col py-3" style="background-color: black;">
                 <div class="row">
                     <div class="col-sm-6 mb-3 mb-sm-0">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="card" style="background-color: #0E45B7;">
+                            <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
                                     content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="btn btn-light">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="card" style="background-color: #0E45B7;">
+                            <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
                                     content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="btn btn-light">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 pt-4">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="card" style="background-color: #0E45B7;">
+                            <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
                                     content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="btn btn-light">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 pt-4">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="card" style="background-color: #0E45B7;">
+                            <div class="card-body text-white">
                                 <h5 class="card-title">Special title treatment</h5>
                                 <p class="card-text">With supporting text below as a natural lead-in to additional
                                     content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="#" class="btn btn-light">Go somewhere</a>
                             </div>
                         </div>
                     </div>
