adding chat box

--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -196,20 +196,20 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <div class="collapse collapse-vertical collapse-vertical_content" id="collapseWidthExample">
+                        <input type="text" class="custom_card_body form-control" placeholder="Type your message here">
+                </div>
+                </div>
+
+                <button class="btn btn-primary collapse-vertical_btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                    Chat With Support
+                </button>
             </div>
         </div>
     </div>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
-        <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-
-        <h2>Section title</h2>
-        <div class="table-responsive small">
-        </div>
-    </main>
-    </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
