--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -101,6 +101,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+    <link href="support.css" rel="stylesheet">
 </head>
 
 <body>
@@ -145,52 +146,56 @@
                     <hr>
                 </div>
             </div>
-            <div class="col py-3" style="background-color: black;">
+            <div class="col py-3 inter" style="background-color: black;">
                 <div class="row">
                     <div class="d-flex justify-content-center text-white">
                         <h3>Settings</h3>
                     </div>
-                    <div class="col-sm-6 mb-3 mb-sm-0">
+                    <div class="col-md-4 col-sm-12 mb-3 mb-sm-0">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
+                                <image src="images/personal_info.svg"/>
+                                <br/><br/>
+                                <h5 class="card-title">Personal Info</h5>
+                                <p class="card-text">Provide personal details and how we can reach you</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-md-4 col-sm-12">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
+                                <image src="images/security.svg"/>
+                                <br/><br/>
+                                <h5 class="card-title">Login & Security</h5>
+                                <p class="card-text">Update your password and secure your account</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 pt-4">
+                    <div class="col-md-4 col-sm-12">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 pt-4">
-                        <div class="card" style="background-color: #0E45B7;">
-                            <div class="card-body text-white">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
-                                    content.</p>
-                                <a href="#" class="btn btn-light">Go somewhere</a>
+                                <image src="images/preferences.svg"/>
+                                <br/><br/>
+                                <h5 class="card-title">Global Preferences</h5>
+                                <p class="card-text">Set your default language, currency, and timezone</p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4 col-sm-12 pt-4">
+                        <div class="card" style="background-color: #0E45B7;">
+                            <div class="card-body text-white">
+                                <image src="images/referral.svg"/>
+                                <br/><br/>
+                                <h5 class="card-title">Referral credit & coupon</h5>
+                                <p class="card-text">You have $0 referral credits and coupon. Learn more.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
