--- a/HomeLink/settings.html
+++ b/HomeLink/settings.html
@@ -114,8 +114,8 @@
             <input type="text" class="navbar_search" placeholder="Search type of keywords" />
             <ul class="nav navbar-nav navbar-right">
                 <form class="d-flex p-1" role="search">
-                    <button class="btn btn-outline-primary me-2" type="submit">Login</button>
-                    <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+                    <button class="btn btn-outline-primary me-2"><a class="text-decoration-none" href="../HomeLink/log-in.html">Login</a></button>
+                    <button class="btn btn-outline-primary"><a class="text-decoration-none" href="../HomeLink/sign-up.html">Sign up</a></button>
                 </form>
             </ul>
         </div>
@@ -154,7 +154,7 @@
                     <div class="col-md-4 col-sm-12 mb-3 mb-sm-0">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <image src="images/personal_info.svg"/>
+                                <img src="images/personal_info.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Personal Info</h5>
                                 <p class="card-text">Provide personal details and how we can reach you</p>
@@ -164,7 +164,7 @@
                     <div class="col-md-4 col-sm-12">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <image src="images/security.svg"/>
+                                <img src="images/security.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Login & Security</h5>
                                 <p class="card-text">Update your password and secure your account</p>
@@ -174,7 +174,7 @@
                     <div class="col-md-4 col-sm-12">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <image src="images/preferences.svg"/>
+                                <img src="images/preferences.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Global Preferences</h5>
                                 <p class="card-text">Set your default language, currency, and timezone</p>
@@ -187,7 +187,7 @@
                     <div class="col-md-4 col-sm-12 pt-4">
                         <div class="card" style="background-color: #0E45B7;">
                             <div class="card-body text-white">
-                                <image src="images/referral.svg"/>
+                                <img src="images/referral.svg"/>
                                 <br/><br/>
                                 <h5 class="card-title">Referral credit & coupon</h5>
                                 <p class="card-text">You have $0 referral credits and coupon. Learn more.</p>
