--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -126,8 +126,8 @@
             <input type="text" class="navbar_search" placeholder="Search type of keywords" />
             <ul class="nav navbar-nav navbar-right">
                 <form class="d-flex p-1" role="search">
-                    <button class="btn btn-outline-primary me-2" type="submit">Login</button>
-                    <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+                    <button class="btn btn-outline-primary me-2"><a class="text-decoration-none" href="../HomeLink/log-in.html">Login</a></button>
+                    <button class="btn btn-outline-primary"><a class="text-decoration-none" href="../HomeLink/sign-up.html">Sign Up</a></button>
                 </form>
             </ul>
         </div>
