--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -110,11 +110,13 @@
         <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
       </div>
       <h3 class="text-white" style="font-size: 24px;">Dashboard</h3>
-      <input type="text" class="navbar_search" placeholder="Search type of keywords"/>
+      <input type="text" class="navbar_search" placeholder="Search type of keywords" />
       <ul class="nav navbar-nav navbar-right">
-        <form class="d-flex p-1" role="search">
-          <button class="btn btn-outline-primary me-2" type="submit">Login</button>
-          <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+        <form class="d-flex p-1">
+          <button class="btn btn-outline-primary me-2"><a class="text-decoration-none"
+              href="../HomeLink/log-in.html">Login</a></button>
+          <button class="btn btn-outline-primary"><a class="text-decoration-none" href="../HomeLink/sign-up.html">Sign
+              up</a></button>
         </form>
       </ul>
     </div>
@@ -134,7 +136,8 @@
             </li>
             <li>
               <a href="support.html" class="nav-link px-0 align-middle">
-                <i class="fs-4 bi-table text-white"></i> <span class="ms-1 d-none d-sm-inline text-white">Support</span></a>
+                <i class="fs-4 bi-table text-white"></i> <span
+                  class="ms-1 d-none d-sm-inline text-white">Support</span></a>
             </li>
             <li>
               <a href="settings.html" class="nav-link px-0 align-middle text-white">
@@ -145,7 +148,60 @@
         </div>
       </div>
       <div class="col py-3" style="background-color: black;">
-        <p class="text-white">Content here...</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Temperature</h5>
+                <p class="card-text">72°F</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Humidity</h5>
+                <p class="card-text">45%</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Lighting</h5>
+                <p class="card-text">On</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 mb-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Security</h5>
+                <p class="card-text">Armed</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
+          <div class="card custom_card" style="background-color: #0E45B7;">
+            <div class="card-body text-white">
+              <h5 class="card-title">Usage Status</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional
+                content.</p>
+              <a href="#" class="btn btn-light">Usage Statistics</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 mb-3 mb-sm-0 mt-4">
+          <div class="card custom_card" style="background-color: #0E45B7;">
+            <div class="card-body text-white">
+              <h5 class="card-title">Air Conditioner</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional
+                content.</p>
+              <a href="#" class="btn btn-light">Control Center</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
