--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -101,6 +101,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="dashboard.css" rel="stylesheet">
+  <link href="support.css" rel="stylesheet">
 </head>
 
 <body>
@@ -110,7 +111,8 @@
         <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
       </div>
       <h3 class="text-white" style="font-size: 24px;">Dashboard</h3>
-      <input type="text" class="navbar_search" placeholder="Search type of keywords" />
+      <input type="text" class="navbar_search search_field" placeholder="Search type of keywords" />
+      <button class="btn btn-outline-primary search_btn">Search</button>
       <ul class="nav navbar-nav navbar-right">
         <form class="d-flex p-1">
           <button class="btn btn-outline-primary me-2"><a class="text-decoration-none"
@@ -120,7 +122,7 @@
         </form>
       </ul>
     </div>
-  </nav>
+</nav>
 
 
   <div class="container-fluid">
