--- a/HomeLink/support.html
+++ b/HomeLink/support.html
@@ -119,17 +119,20 @@
 <body>
     <nav class="navbar navbar-inverse" style="background-color: black;">
         <div class="container-fluid align-items-center">
-            <div class="navbar-header">
-                <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
-            </div>
-            <h3 class="text-white" style="font-size: 24px;">Dashboard</h3>
-            <input type="text" class="navbar_search" placeholder="Search type of keywords" />
-            <ul class="nav navbar-nav navbar-right">
-                <form class="d-flex p-1" role="search">
-                    <button class="btn btn-outline-primary me-2"><a class="text-decoration-none" href="../HomeLink/log-in.html">Login</a></button>
-                    <button class="btn btn-outline-primary"><a class="text-decoration-none" href="../HomeLink/sign-up.html">Sign Up</a></button>
-                </form>
-            </ul>
+          <div class="navbar-header">
+            <a class="navbar-brand text-white" href="index.html"><img src="./images/logo.png" alt="Bootstrap"></a>
+          </div>
+          <h3 class="text-white" style="font-size: 24px;">Dashboard</h3>
+          <input type="text" class="navbar_search search_field" placeholder="Search type of keywords" />
+          <button class="btn btn-outline-primary search_btn">Search</button>
+          <ul class="nav navbar-nav navbar-right">
+            <form class="d-flex p-1">
+              <button class="btn btn-outline-primary me-2"><a class="text-decoration-none"
+                  href="../HomeLink/log-in.html">Login</a></button>
+              <button class="btn btn-outline-primary"><a class="text-decoration-none" href="../HomeLink/sign-up.html">Sign
+                  up</a></button>
+            </form>
+          </ul>
         </div>
     </nav>
 
@@ -198,7 +201,7 @@
                 </div>
                 <div>
                     <div class="collapse collapse-vertical collapse-vertical_content" id="collapseWidthExample">
-                        <input type="text" class="custom_card_body form-control" placeholder="Type your message here">
+                        <input type="text" class="custom_card_body form-control custom_font_size" placeholder="Your message here">
                 </div>
                 </div>
 
