--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -162,7 +162,10 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Temperature</h5>
-                <p class="card-text">72°F</p>
+                <div class="input-group mb-3">
+                  <input type="range" class="form-range" id="tempSlider" min="0" max="30" value="15">
+                  <label class="form-label" for="tempSlider">Current Temperature: <span id="tempValue">15</span><sup>o</sup>C</label>
+                </div>
               </div>
             </div>
           </div>
@@ -170,13 +173,16 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Humidity</h5>
-                <p class="card-text">45%</p>
+                <div class="input-group mb-3">
+                  <input type="range" class="form-range" id="humiditySlider" min="0" max="100" value="50">
+                  <label class="form-label" for="humiditySlider">Current Humidity: <span id="humidityValue">50</span></label>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Lighting</h5>
                 <div class="custom-control form-check form-switch">
                   <input class="form-check-input custom_control_input" type="checkbox" id="mySwitch">
@@ -186,7 +192,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Security</h5>
                 <div class="form-check form-switch">
                   <input class="form-check-input" type="checkbox" id="mySwitch">
@@ -226,6 +232,24 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <script>
+      const humiditySlider = document.getElementById('humiditySlider');
+      const humidityValue = document.getElementById('humidityValue');
+  
+      // Update the humidity value when the slider value changes
+      humiditySlider.addEventListener('input', function() {
+        humidityValue.textContent = this.value;
+      });
+    </script>
+        <script>
+          const tempSlider = document.getElementById('tempSlider');
+          const tempValue = document.getElementById('tempValue');
+      
+          // Update the humidity value when the slider value changes
+          tempSlider.addEventListener('input', function() {
+            tempValue.textContent = this.value;
+          });
+        </script>
 </body>
 
 </html>
