chaning colour of cards

--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -94,6 +94,11 @@
     .bd-mode-toggle .dropdown-menu .active .bi {
       display: block !important;
     }
+
+    .custom-card-colour {
+      background-color: #252525;
+      color: white;
+    }
   </style>
 
 
@@ -159,7 +164,7 @@
       <div class="col py-3" style="background-color: black;">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3 mb-4">
-            <div class="card">
+            <div class="card custom-card-colour">
               <div class="card-body">
                 <h5 class="card-title">Temperature</h5>
                 <div class="input-group mb-3">
@@ -170,7 +175,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
-            <div class="card">
+            <div class="card custom-card-colour">
               <div class="card-body">
                 <h5 class="card-title">Humidity</h5>
                 <div class="input-group mb-3">
@@ -181,7 +186,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
-            <div class="card">
+            <div class="card custom-card-colour">
               <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Lighting</h5>
                 <div class="custom-control form-check form-switch">
@@ -191,7 +196,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 mb-4">
-            <div class="card">
+            <div class="card custom-card-colour">
               <div class="card-body" style="margin-bottom: 5vh;">
                 <h5 class="card-title">Security</h5>
                 <div class="form-check form-switch">
