fixing humidity slider

--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -180,7 +180,7 @@
                 <h5 class="card-title">Humidity</h5>
                 <div class="input-group mb-3">
                   <input type="range" class="form-range" id="humiditySlider" min="0" max="100" value="50">
-                  <label class="form-label" for="humiditySlider">Current Humidity: <span id="humidityValue">50</span></label>
+                  <label class="form-label" for="humiditySlider">Current Humidity: <span id="humidityValue">50</span>%</label>
                 </div>
               </div>
             </div>
