changing card text

--- a/HomeLink/index.html
+++ b/HomeLink/index.html
@@ -210,8 +210,7 @@
           <div class="card custom_card" style="background-color: #0E45B7;">
             <div class="card-body text-white">
               <h5 class="card-title">Usage Status</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional
-                content.</p>
+              <p class="card-text">Get statistics on your home energy consumption rates.</p>
               <a href="#" class="btn btn-light">Usage Statistics</a>
             </div>
           </div>
@@ -220,8 +219,7 @@
           <div class="card custom_card" style="background-color: #0E45B7;">
             <div class="card-body text-white">
               <h5 class="card-title">Air Conditioner</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional
-                content.</p>
+              <p class="card-text">A more detailed view of your home temperature controls.</p>
               <a href="#" class="btn btn-light">Control Center</a>
             </div>
           </div>
